<resources>
    <string name="app_name">HiStory</string>
    <string name="write">기록하기</string>
    <string name="warning">주의</string>
    <string name="do_enter">입장하기</string>
    <string name="enter">입장</string>
    <string name="id">아이디</string>
    <string name="password">비밀번호</string>
    <string name="register">등록하기</string>
    <string name="nickname">닉네임</string>
    <string name="login">로그인</string>
    <string name="next">다음</string>
    <string name="confirm">확인</string>
    <string name="story">이야기</string>
    <string name="find_story">이야기 찾기</string>
    <string name="term"><u>이용 약관</u></string>
    <string name="align">정렬</string>
    <string name="title">제목</string>
    <string name="topic">주제</string>
    <string name="back">뒤로가기</string>
    <string name="exit">나가기</string>
    <string name="test">과거시험</string>
    <string name="korean">한국사</string>
    <string name="oriental">동양사</string>
    <string name="western">서양사</string>
    <string name="etc">기타</string>
    <string name="hashtag">해시태그</string>
    <string name="add_hashtag">+ 해시태그 추가</string>
    <string name="add_image">사진 첨부</string>
    <string name="signup">회원가입</string>
    <string name="straight_divider">&#160;&#160;|&#160;&#160;</string>
    <string name="slash_divider">&#160;&#160;&#160;/&#160;&#160;&#160;</string>

    <string name="NEW">NEW</string>
    <string name="read_story">새로운 이야기들을 읽어보세요!</string>
    <string name="confirm_term">확인을 누르면</string>
    <string name="agree">동의로 간주합니다</string>
    <string name="let_find_story">이야기를 찾아볼까요?</string>
    <string name="forget_password">비밀번호를 잊으셨나요?</string>
    <string name="put_nickname">사용하실 닉네임을 입력해주세요</string>
    <string name="available_nickname">사용 가능한 닉네임입니다.</string>
    <string name="put_id">사용하실 아이디를 입력해주세요</string>
    <string name="available_id">사용 가능한 아이디입니다.</string>
    <string name="put_password">사용하실 비밀번호를 입력해주세요</string>
    <string name="already_use_id">이미 사용 중인 아이디입니다</string>
    <string name="already_use_nickname">이미 사용 중인 닉네임입니다</string>
    <string name="length_password">비밀번호는 6 &#45; 9글자여야합니다</string>
    <string name="check_password">비밀번호를 확인해주세요</string>
    <string name="diff_password">비밀번호가 일치하지 않습니다</string>
    <string name="write_title">제목을 작성해주세요</string>
    <string name="write_category">주제를 선택해주세요</string>
    <string name="write_story">내용을 작성해주세요</string>
    <string name="write_comment">댓글을 입력해보세요.</string>
    <string name="test_category">문제를 풀기 전,\n원하는 카테고리를 선택해주세요!</string>
    <string name="check_exist">중복 확인</string>
    <string name="plus">+</string>
    <string name="blank"></string>
    <string name="align_recent">최신순으로 정렬</string>
    <string name="align_like">인기순으로 정렬</string>
    <string name="story_delete">게시글 삭제하기</string>
    <string name="story_report">게시글 신고하기</string>
    <string name="search_title">제목에서 검색하기</string>
    <string name="search_content">내용에서 검색하기</string>

</resources>