<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:id="@+id/search_search_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/find_story"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="29dp"
        android:layout_marginTop="68dp"
        android:textSize="21sp"
        />
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        app:layout_constraintTop_toBottomOf="@id/search_search_tv"
        app:layout_constraintStart_toStartOf="parent">
        <EditText
            android:id="@+id/search_search_et"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:drawableStart="@drawable/button_search"
            android:paddingBottom="18dp"
            android:textSize="14sp"
            android:inputType="text"
            android:hint="@string/let_find_story"
            android:drawablePadding="13dp"
            android:backgroundTint="@color/primary_color"
            android:layout_marginHorizontal="28dp"/>

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:scaleType="fitCenter"
            android:layout_gravity="end|center_vertical"
            android:layout_marginEnd="35dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/align"
            android:src="@drawable/ic_setting_dark" />
    </FrameLayout>






</androidx.constraintlayout.widget.ConstraintLayout>