<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <ImageButton
        android:id="@+id/login_exit_iv"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:scaleType="fitCenter"
        android:layout_marginTop="40dp"
        android:layout_marginStart="20dp"
        android:src="@drawable/left_arrow"
        android:background="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>
    <TextView
        android:id="@+id/login_enter_tv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/do_enter"
        android:layout_marginStart="24dp"
        android:layout_marginTop="40dp"
        android:textSize="21sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/login_exit_iv"
        app:layout_constraintStart_toStartOf="parent"/>
    <EditText
        android:id="@+id/login_id_et"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="130dp"
        android:paddingBottom="15dp"
        android:textSize="14sp"
        android:hint="@string/id"
        app:layout_constraintTop_toBottomOf="@id/login_enter_tv"
        app:layout_constraintStart_toStartOf="@id/login_enter_tv"/>
    <EditText
        android:id="@+id/login_id_pw"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="30dp"
        android:paddingBottom="15dp"
        android:textSize="14sp"
        android:hint="@string/password"
        app:layout_constraintTop_toBottomOf="@id/login_id_et"
        app:layout_constraintStart_toStartOf="@id/login_id_et"/>
    <Button
        android:id="@+id/login_enter_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/button_round"
        android:layout_marginHorizontal="35dp"
        android:layout_marginTop="50dp"
        android:text="@string/enter"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@id/login_id_pw"
        app:layout_constraintStart_toStartOf="@id/login_id_pw"/>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:layout_constraintTop_toBottomOf="@id/login_enter_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">
        <TextView
            android:id="@+id/login_signup_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="회원가입"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:id="@+id/login_divider_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="  |  "
            app:layout_constraintStart_toEndOf="@id/login_signup_tv"
            app:layout_constraintTop_toTopOf="parent"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="비밀번호를 잊으셨나요?"
            app:layout_constraintStart_toEndOf="@id/login_divider_tv"
            app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>