<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/fragment_test_ly"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:text="@string/test"
        android:textStyle="bold"
        android:textColor="@color/black"
        android:layout_marginStart="29dp"
        android:layout_marginTop="68dp"
        android:textSize="21sp"
        />
    <LinearLayout
        android:id="@+id/test_exit_ly"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:text="@string/exit"
            android:layout_marginEnd="16dp"
            />
        <ImageView
            android:layout_width="24dp"
            android:layout_height="20dp"
            android:src="@drawable/right_arrow"
            android:layout_marginEnd="36dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="16sp"
        android:text="@string/test_category"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="29dp"
        android:layout_marginTop="160dp"
        />
    <ImageView
        android:id="@+id/test_all_iv"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:src="@drawable/test_all"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="33dp"
        android:layout_marginTop="240dp"
        />
    <ImageView
        android:id="@+id/test_korean_history_iv"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:src="@drawable/test_korean_history"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="210dp"
        android:layout_marginTop="240dp"
        />

    <ImageView
        android:id="@+id/test_oriental_iv"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:src="@drawable/test_oriental_history"
        app:layout_constraintTop_toBottomOf="@+id/test_all_iv"
        app:layout_constraintStart_toStartOf="@+id/test_all_iv"
        android:layout_marginTop="17dp"
        />

    <ImageView
        android:id="@+id/test_western_iv"
        android:layout_width="170dp"
        android:layout_height="200dp"
        android:src="@drawable/test_western_history"
        app:layout_constraintTop_toBottomOf="@+id/test_korean_history_iv"
        app:layout_constraintStart_toStartOf="@+id/test_korean_history_iv"
        android:layout_marginTop="17dp"
        />






</androidx.constraintlayout.widget.ConstraintLayout>